# Swap_scheme

./: README.md
linux4.18.3/block/: bio.c
linux4.18.3/fs/: direct-io.c
linux4.18.3/fs/f2fs/: CMakeLists.txt  Makefile  checkpoint.c  data.c  f2fs.h  gc.c  gc_nvm.c  node.c  nvm.c  nvm.h  segment.c  segment.h  super.c
linux4.18.3/include/linux/: f2fs_fs.h  memcontrol.h  mm_types.h  page-flags.h
linux4.18.3/mm/: memory_hotplug.c  rmap.c  vmscan.c
